@@ -1131,19 +1131,22 @@ public class TestDistributedFileSystem {
     try {
       cluster.waitActive();
       DistributedFileSystem dfs = cluster.getFileSystem();
-      // Write 1 MB to a dummy socket to ensure the write times out
+      // Write 10 MB to a dummy socket to ensure the write times out
       ServerSocket socket = new ServerSocket(0);
       Peer peer = dfs.getClient().newConnectedPeer(
         (InetSocketAddress) socket.getLocalSocketAddress(), null, null);
       long start = Time.now();
       try {
-        byte[] buf = new byte[1024 * 1024];
+        byte[] buf = new byte[10 * 1024 * 1024];
         peer.getOutputStream().write(buf);
-        Assert.fail("write should timeout");
+        long delta = Time.now() - start;
+        Assert.fail("write finish in " + delta + " ms" + "but should timedout");
       } catch (SocketTimeoutException ste) {
         long delta = Time.now() - start;
-        Assert.assertTrue("write timedout too soon", delta >= timeout * 0.9);
-        Assert.assertTrue("write timedout too late", delta <= timeout * 1.1);
+        Assert.assertTrue("write timedout too soon in " + delta + " ms",
+            delta >= timeout * 0.9);
+        Assert.assertTrue("write timedout too late in " + delta + " ms",
+            delta <= timeout * 1.2);
       } catch (Throwable t) {
         Assert.fail("wrong exception:" + t);
       }
